fixed bug where card sides bleed through

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -29,7 +29,7 @@ body {
 }
 
 body #root {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -129,7 +129,7 @@ main {
   width: 95%;
   min-width: 300px;
   max-width: 800px;
-  margin-top: 50px;
+  margin: 50px 0;
 
   position: relative;
   transform-style: preserve-3d;
@@ -143,6 +143,7 @@ main {
 .list-card-side {
   position: absolute;
   backface-visibility: hidden;
+  z-index: 5;
 
   display: flex;
   flex-direction: column;
@@ -220,7 +221,7 @@ button {
   background-color: var(--purple-color);
   border-radius: 10px;
   height: 300px;
-  margin-top: 150px;
+  margin-top: 50px;
   width: 95%;
   min-width: 300px;
   max-width: 700px;
@@ -229,6 +230,10 @@ button {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+}
+
+.set-goal-form {
+  margin: 50px 0;
 }
 
 .set-goal-form h2 {
@@ -270,6 +275,16 @@ button {
 button:hover,
 button:focus {
   cursor: pointer;
+}
+
+.popup-message {
+  font-size: 1.3rem;
+  margin: 30px;
+  transition: all 0.2s linear;
+}
+
+.invisible {
+  opacity: 0;
 }
 
 /* Footer styles */
